<resources>
    <string name="app_name">Recorder</string>
    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="string_title">Title</string>
    <string name="string_interviewee">Interviewee</string>
    <string name="string_date">Date</string>
    <string name="string_enter">Enter</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_pause">Pause</string>
    <string name="string_start_playback">Start Playback</string>
    <string name="string_start_recording">Start Recording</string>
    <string name="string_pause_playback">Pause Playback</string>
    <string name="string_pause_recording">Pause Recording</string>
    <string name="string_stop_playback">Stop Playback</string>
    <string name="string_stop_recording">Stop Recording</string>
    <string name="string_new">New</string>
    <string name="string_skip">Skip</string>
    <string name="title_activity_detail_edit">DetailEditActivity</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="string_photo">Photo</string>
    <string name="description">Description</string>

</resources>
