<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!--Title-->
        <LinearLayout
            android:id="@+id/container_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/string_title" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/string_title"
                android:inputType="textCapWords" />

        </LinearLayout>



        <!--Interviewee-->
        <LinearLayout
            android:id="@+id/container_interviewee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/string_interviewee" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_first_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/firstName"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_last_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/lastName"
                android:inputType="textCapWords" />

        </LinearLayout>

        <!--Date-->
        <LinearLayout
            android:id="@+id/container_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/string_date" />

            <EditText
                android:id="@+id/edit_date"
                style="@style/EditorFieldStyle"
                android:hint="@string/string_date"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/description" />

            <EditText
                android:id="@+id/edit_description"
                style="@style/EditorFieldStyle"
                android:layout_height="128dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minLines="6" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photo_view"
                android:layout_width="@dimen/larger_image_size"
                android:layout_height="@dimen/larger_image_size"
                android:layout_toLeftOf="@id/multiuse_button"
                android:visibility="visible"
                android:src="@drawable/ic_portrait_black_24dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/multiuse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_toLeftOf="@id/enter_details_button"
                android:enabled="true"
                android:text="@string/string_photo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:visibility="visible" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/enter_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:enabled="true"
                android:text="@string/string_enter"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>